# src/main/java/iam/bookme/controller/BookingController.java
@@ -1,5 +1,6 @@
 package iam.bookme.controller;
 
+import iam.bookme.dto.BookingDto;
 import iam.bookme.dto.BookingsListDto;
 import iam.bookme.service.BookingService;
 import org.slf4j.Logger;
@@ -7,6 +8,8 @@ import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.UUID;
 
 @RestController
 @RequestMapping("/api/v1")
@@ -19,7 +22,6 @@ public class BookingController implements BookingsApi {
         this.bookingService = bookingService;
     }
 
-
     @Override
     public ResponseEntity<BookingsListDto> getBookings(Integer pageNo, Integer pageSize, String direction, String orderBy) {
         log.debug("Received request to get all bookings with pageNo {}, pageSize {}, direction {} and orderBy {}", pageNo, pageSize, direction, orderBy);
@@ -30,4 +32,12 @@ public class BookingController implements BookingsApi {
         response.setTotalPages(allBookings.getTotalPages());
         return ResponseEntity.ok(response);
     }
+
+    @Override
+    public ResponseEntity<BookingDto> getBookingById(UUID id) {
+        log.debug("Received request to get booking by id {}", id);
+        var response = bookingService.getBookingById(id);
+        return ResponseEntity.ok(response);
+    }
+
 }
